--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ nav {
 }
 
 span {
-    color: #B9CBBA;
+    color: #7EA080;
 
 }
 
@@ -53,7 +53,7 @@ nav ul li {
 }
 
 nav ul li a:hover {
-    color: gray;
+    color: #7EA080;
     transition: .5s;
 
 }
@@ -62,7 +62,7 @@ a {
 }
 
 .btn {
-    background-color: grey;
+    background-color: #3D523E;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -113,7 +113,7 @@ h4 {
     display: inline-block;
     width: 100%;
     padding: 14px 130px 14px 15px;
-    border: 2px solid #B9CBBA;
+    border: 2px solid #7EA080;
     outline: none;
     border-radius: 30px;
 }
@@ -125,7 +125,7 @@ h4 {
     border: none;
     padding: 10px 30px;
     border-radius: 30px;
-    background-color: #B9CBBA;
+    background-color: #7EA080;
     color: white;
     box-shadow: 5px #000, 15px #858585;
     top: 6px;
@@ -135,7 +135,7 @@ h4 {
 .about {
     width: 100%;
     padding: 100px 0px;
-    background-color: black;
+    background-color: #0A0A0A;
 
 }
 
@@ -183,7 +183,7 @@ h4 {
 }
 
 button {
-    background-color: #AEC3B0;
+    background-color: #7EA080;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -195,12 +195,12 @@ button {
 
 button:hover{
     background-color: transparent;
-    border: 2px solid #AEC3B0;
+    border: 2px solid #7EA080;
     cursor: pointer;
 }
 
 .skills {
-    background-color: black;
+    background-color: #333333;
     width: 100%;
     padding: 100px 0px;
 
@@ -226,7 +226,7 @@ button:hover{
     height: 165px;
     width: 165px;
     padding: 20px 35px;
-    background-color: #a1baa2;
+    background-color: #7EA080;
     border-radius: 20px;
     margin: 15px;
     position: relative;
@@ -252,7 +252,7 @@ h5 {
 .contact-me {
     width: 100%;
     height: 300px;
-    background: black;
+    background: #3D3D3D;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -267,7 +267,7 @@ h5 {
 }
 
 .contact-me .button-two {
-    background-color: grey;
+    background-color: #3D523E;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
@@ -284,7 +284,7 @@ h5 {
 .projects {
     width: 100%;
     padding: 100px 0px;
-    background-color: black;
+    background-color: #1f1f1f;
 
 }
 
@@ -306,7 +306,7 @@ h5 {
     height: 365px;
     width: 365px;
     padding: 20px 35px;
-    background-color: #a1baa2;
+    background-color: #7EA080;
     border-radius: 20px;
     margin: 15px;
     position: relative;
@@ -317,7 +317,7 @@ footer {
 position: relative;
 width: 100%;
 height: 400px;
-background: black;
+background: #474747;
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -362,9 +362,9 @@ footer p:nth-child(2){
 }
 
 .social i{
-    color: #a1baa2;
-    font-size: 50px;
-    justify-content: space-around;
+    color: #7EA080;
+    font-size: 70px;
+    justify-content: space-between;
 }
 
 .end {
